--- a/moveit_configuration/irb2600_write_moveit/config/fake_controllers.yaml
+++ b/moveit_configuration/irb2600_write_moveit/config/fake_controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: fake_robot_arm_controller
+  - name: fake_irb2600_arm_controller
     type: $(arg fake_execution_type)
     joints:
       - joint_1
@@ -9,5 +9,5 @@ controller_list:
       - joint_5
       - joint_6
 initial:  # Define initial robot poses per group
-  - group: robot_arm
+  - group: irb2600_arm
     pose: home
